fixed text visibility

--- a/modules/home/Home.scss
+++ b/modules/home/Home.scss
@@ -41,11 +41,18 @@
       h1 {
         font-size: 64px;
         line-height: 72px;
-        color: transparent;
         font-weight: 700;
         margin: 0px 0px 24px;
-        background: $text-gradient;
         pointer-events: auto;
+        background-image: linear-gradient(
+          20deg,
+          rgb(255, 244, 207) 10%,
+          rgb(255, 87, 218) 100%
+        );
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
         @include mQ($lg) {
           font-size: 36px;
           line-height: 44px;
